[project]
name = "ytd-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs==4.5.1 ; python_full_version >= '3.10'",
    "platformdirs>=4.5.1",
    "yt-dlp==2025.12.8 ; python_full_version >= '3.10'",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "black==25.12.0 ; python_full_version >= '3.10'",
    "click==8.3.1 ; python_full_version >= '3.10'",
    "iniconfig==2.3.0 ; python_full_version >= '3.10'",
    "isort==7.0.0 ; python_full_version >= '3.10'",
    "mypy-extensions==1.1.0 ; python_full_version >= '3.8'",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "pathspec==0.12.1 ; python_full_version >= '3.8'",
    "platformdirs==4.5.1 ; python_full_version >= '3.10'",
    "pluggy==1.6.0 ; python_full_version >= '3.9'",
    "pygments==2.19.2 ; python_full_version >= '3.8'",
    "pytest==9.0.2 ; python_full_version >= '3.10'",
    "pytokens==0.3.0 ; python_full_version >= '3.8'",
    "yt-dlp==2025.12.8 ; python_full_version >= '3.10'",
]
